<resources>
    <string name="app_name">Horchat</string>
    <string name="app_url">https://github.com/marcosbc/horchat</string>
    <string name="app_license">GNU GPLv2</string>
    <string name="app_license_url">https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html</string>
    <!-- Placeholders (to be replaced) -->
    <string name="placeholder_title">Horchat</string>
    <string name="placeholder_username">_USERNAME_</string>
    <string name="placeholder_item">_ITEM_</string>
    <string name="placeholder_text">_TEXT_</string>
    <string name="placeholder_date">_DATE_</string>
    <string name="placeholder_closeConversation">_CLOSE_</string>
    <string name="placeholder_version">_VERSION_</string>
    <!-- Toolbar -->
    <string name="toolbar_search">Search</string>
    <string name="toolbar_options">Menu</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_logout">Log out</string>
    <!-- Menu -->
    <string name="menu_leaveChannel">Leave channel</string>
    <string name="menu_closePrivateConversation">Close conversation</string>
    <!-- Connect to server activity -->
    <string name="connectToServer_title">Connect to a server</string>
    <string name="connectToServer_next">Next</string>
    <string name="connectToServer_serverHost">Hostname</string>
    <string name="connectToServer_serverPort">Port</string>
    <string name="connectToServer_serverPassword">Password</string>
    <string name="connectToServer_username">Username</string>
    <string name="connectToServer_realName">Real name</string>
    <string name="connectToServer_nickname">Nickname</string>
    <string name="connectToServer_connect">Connect</string>
    <string name="connectToServer_eUnknown">Unknown exception happened</string>
    <string name="connectToServer_eHostNotValid">Please check your hostname</string>
    <string name="connectToServer_ePortRange">Please check your port number</string>
    <string name="connectToServer_ePortNotInt">Could not parse your port number</string>
    <string name="connectToServer_eUsernameEmpty">The username field cannot be empty</string>
    <string name="connectToServer_eRealNameEmpty">The real name field cannot be empty</string>
    <string name="connectToServer_eNicknameEmpty">The nickname field cannot be empty</string>
    <string name="connectToServer_eNicknameLength">The nickname length is not valid</string>
    <string name="connectToServer_eUsernameFormat">The username is not valid</string>
    <string name="connectToServer_eRealnameFormat">The real name is not valid</string>
    <string name="connectToServer_eNicknameFormat">The nickname is not valid</string>
    <!-- Dropdown menu -->
    <string name="dropdown_settings">Settings</string>
    <!-- Toast messages -->
    <string name="toast_logout">You have been logged out</string>
    <string name="toast_newChannel">Channel name is invalid</string>
    <string name="toast_notOpenConversation">Could not open conversation</string>
    <!-- Settings/preferences -->
    <string name="preference_title">Settings</string>
    <string name="preference_about">About Horchat</string>
    <string name="preference_nickname">Nickname</string>
    <string name="preference_name">Name</string>
    <string name="preference_version">Version</string>
    <string name="preference_url">Source code</string>
    <string name="preference_license">License</string>
    <!-- Navigation -->
    <string name="navigation_username">%1$s (%2$s)</string>
    <string name="navigation_joinChannel">Join a channel</string>
    <string name="navigation_channels">Channels</string>
    <string name="navigation_sendPrivateMessage">New private conversation</string>
    <string name="navigation_pms">Private conversations</string>
    <!-- Dialogs -->
    <string name="pickChannel_title">Pick a channel</string>
    <string name="pickChannel_newChannel">Create a new channel</string>
    <string name="pickChannel_newChannel_title">Create a new channel</string>
    <string name="pickChannel_newChannel_hint">Title</string>
    <string name="pickChannel_newChannel_create">Create</string>
    <string name="pickChannel_newChannel_cancel">Cancel</string>
    <string name="pickChannel_joined">Joined channel</string>
    <string name="pickChannel_notJoined">Could not join channel</string>
    <string name="pickUser_title">Enter a username</string>
    <string name="pickUser_hint">Username</string>
    <string name="pickUser_choose">Go</string>
    <string name="pickUser_cancel">Cancel</string>
    <string name="userDisconnect_title">Disconnected from server</string>
    <string name="userDisconnect_message">You have been disconnected from %1$s.</string>
    <!-- Conversation -->
    <string name="conversation_message">Message</string>
    <!-- Server message types -->
    <string name="status_connecting">Connecting to %1$s...</string>
    <string name="status_connected">Connected to %1$s.</string>
    <string name="status_disconnected">Disconnected from %1$s.</string>
    <string name="status_join">%1$s joined %2$s.</string>
    <string name="status_leave">%1$s left %2$s.</string>
    <string name="status_kick">%1$s was kicked from %2$s.</string>
    <string name="status_quit">%1$s disconnected from %2$s.</string>
</resources>
