<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- Server connection layout -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/connectToServer_username"/>

    <EditText
        android:id="@+id/realName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="10dp"
        android:hint="@string/connectToServer_realName"/>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/realName"
        android:layout_marginTop="10dp"
        android:hint="@string/connectToServer_nickname"/>

    <Button
        android:id="@+id/connectToServer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname"
        android:layout_marginTop="10dp"
        android:text="@string/connectToServer_connect"/>

</RelativeLayout>