<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- Server connection layout -->
    <EditText
        android:id="@+id/serverHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/connectToServer_serverHost"/>

    <EditText
        android:id="@+id/serverPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverHost"
        android:layout_marginTop="10dp"
        android:hint="@string/connectToServer_serverPort"
        android:inputType="number"/>

    <EditText
        android:id="@+id/serverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverPort"
        android:layout_marginTop="10dp"
        android:hint="@string/connectToServer_serverPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/connectToServer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverPassword"
        android:layout_marginTop="10dp"
        android:text="@string/connectToServer_next"/>

</RelativeLayout>