<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">
    <!-- Search button -->
    <!-- TODO: Add search functionality -->
    <!--
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/toolbar_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    -->
    <item
        android:id="@+id/action_options"
        android:icon="@drawable/ic_menu_dropdown"
        android:title="@string/toolbar_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/toolbar_settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_logout"
                android:title="@string/toolbar_logout"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>